// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<LoginSocialButtons /> renders all buttons 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div>
    <p
      className="sc-bcXGCL hvFAEl cap-text"
    >
      <p>
        fc-title
      </p>
    </p>
    <div
      className="sc-a69c970d-1 gMJhho"
      justifyContent="start"
    >
      <a
        href="/login/franceconnect?_destination=http://localhost/"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        title="FranceConnect"
      >
        <span
          className="loginIcon"
          style={
            {
              "lineHeight": "inherit",
            }
          }
        >
          <div
            data-testid="LegacyIcon-franceConnect"
          />
        </span>
      </a>
    </div>
    <div
      className="sc-bcXGCL lhlJyz"
    >
      <a
        className="sc-bcXGCL hpjBkM cap-link"
        href="https://franceconnect.gouv.fr/"
        rel="noreferrer"
        target="_blank"
      >
        what-is-fc
      </a>
      <div
        className="sc-bcXGCL kBGUAc cap-text"
      >
        login.or
      </div>
    </div>
  </div>,
  <div>
    <div
      className="sc-a69c970d-0 eOLlBu"
      type="openId"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-openId"
        />
      </span>
      <a
        href="/login/openid?_destination=http://localhost/sso/switch-user"
        title="openId"
      >
        <span>
          Cap Collectif Oauth2 Provider
        </span>
      </a>
    </div>
  </div>,
  <div>
    <div
      className="sc-a69c970d-0 bLeHNv"
      type="cas"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-cas"
        />
      </span>
      <a
        href="/login-cas?_destination=http://localhost/"
        title="cas"
      >
        <span>
          Cap Collectif CAS Provider
        </span>
      </a>
    </div>
  </div>,
  <div>
    <div
      className="sc-a69c970d-0 XGJdm"
      type="saml"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-saml"
        />
      </span>
      <a
        href="/login-saml?_destination=http://localhost/"
        title="saml"
      >
        Saml
      </a>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL hmxqKx"
  />,
]
`;

exports[`<LoginSocialButtons /> renders nothing 1`] = `
<div
  className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
/>
`;

exports[`<LoginSocialButtons /> renders only CAS button 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div>
    <div
      className="sc-a69c970d-0 efHzCv"
      type="cas"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-cas"
        />
      </span>
      <a
        href="/login-cas?_destination=http://localhost/"
        title="cas"
      >
        <span>
          Cap Collectif CAS Provider
        </span>
      </a>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL hmxqKx"
  />,
]
`;

exports[`<LoginSocialButtons /> renders only Facebook button 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div>
    <div
      className="sc-a69c970d-0 grDHqA"
      type="facebook"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-facebook"
        />
      </span>
      <a
        href="/login/facebook?_destination=http://localhost/"
        title="facebook"
      >
        Facebook
      </a>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL hmxqKx"
  />,
]
`;

exports[`<LoginSocialButtons /> renders only FranceConnect button 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div>
    <p
      className="sc-bcXGCL hvFAEl cap-text"
    >
      <p>
        fc-title
      </p>
    </p>
    <div
      className="sc-a69c970d-1 gMJhho"
      justifyContent="start"
    >
      <a
        href="/login/franceconnect?_destination=http://localhost/"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        title="FranceConnect"
      >
        <span
          className="loginIcon"
          style={
            {
              "lineHeight": "inherit",
            }
          }
        >
          <div
            data-testid="LegacyIcon-franceConnect"
          />
        </span>
      </a>
    </div>
    <div
      className="sc-bcXGCL lhlJyz"
    >
      <a
        className="sc-bcXGCL hpjBkM cap-link"
        href="https://franceconnect.gouv.fr/"
        rel="noreferrer"
        target="_blank"
      >
        what-is-fc
      </a>
      <div
        className="sc-bcXGCL kBGUAc cap-text"
      >
        login.or
      </div>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL hmxqKx"
  />,
]
`;

exports[`<LoginSocialButtons /> renders only OpenID button 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div>
    <div
      className="sc-a69c970d-0 hSqgni"
      type="openId"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-openId"
        />
      </span>
      <a
        href="/login/openid?_destination=http://localhost/"
        title="openId"
      >
        <span>
          Cap Collectif Oauth2 Provider
        </span>
      </a>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL hmxqKx"
  />,
]
`;

exports[`<LoginSocialButtons /> renders only SAML button 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div>
    <div
      className="sc-a69c970d-0 hmjWfk"
      type="saml"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-saml"
        />
      </span>
      <a
        href="/login-saml?_destination=http://localhost/"
        title="saml"
      >
        Saml
      </a>
    </div>
  </div>,
  <hr
    className="sc-bcXGCL hmxqKx"
  />,
]
`;

exports[`<LoginSocialButtons /> renders without OR separator 1`] = `
[
  <div
    className="sc-bcXGCL eEZeZH toasts-container toasts-container--top"
  />,
  <div>
    <div
      className="sc-a69c970d-0 esuDpW"
      type="openId"
    >
      <span
        className="loginIcon"
        style={
          {
            "lineHeight": "inherit",
          }
        }
      >
        <div
          data-testid="LegacyIcon-openId"
        />
      </span>
      <a
        href="/login/openid?_destination=http://localhost/"
        title="openId"
      >
        <span>
          Cap Collectif Oauth2 Provider
        </span>
      </a>
    </div>
  </div>,
]
`;
